[gd_scene load_steps=7 format=3 uid="uid://d2qlq2jiw7e1s"]

[ext_resource type="Script" path="res://addons/copy_material_overrides/copy_material_dialog.gd" id="1_vcivy"]
[ext_resource type="ArrayMesh" uid="uid://drrnj8xl6e870" path="res://addons/copy_material_overrides/samples_Grid_001.res" id="2_n6vhq"]

[sub_resource type="Image" id="Image_gkmsi"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 227, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 225, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 73, 224, 224, 224, 226, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 225, 226, 226, 226, 70, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_1q72x"]
image = SubResource("Image_gkmsi")

[sub_resource type="Environment" id="Environment_b4j8t"]

[sub_resource type="World3D" id="World3D_5xxq4"]
environment = SubResource("Environment_b4j8t")

[node name="CopyMaterialDialog" type="Container"]
size_flags_horizontal = 6
size_flags_vertical = 4
script = ExtResource("1_vcivy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainerFill" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "Path"
vertical_alignment = 1

[node name="OtherScenePath" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(474, 0)
layout_mode = 2

[node name="OtherSceneBrowseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Select"

[node name="OtherSceneName" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="SampleDirButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Samples"

[node name="ClearButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
icon = SubResource("ImageTexture_1q72x")

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 470)
layout_mode = 2
split_offset = 300

[node name="SceneMeshesScroll" type="ScrollContainer" parent="VBoxContainer/VSplitContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
vertical_scroll_mode = 2

[node name="SceneMeshList" type="VBoxContainer" parent="VBoxContainer/VSplitContainer/SceneMeshesScroll"]
unique_name_in_owner = true
layout_mode = 2

[node name="MaterialsScroll" type="ScrollContainer" parent="VBoxContainer/VSplitContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
vertical_scroll_mode = 2

[node name="MaterialList" type="VBoxContainer" parent="VBoxContainer/VSplitContainer/MaterialsScroll"]
unique_name_in_owner = true
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/SubViewportContainer"]
unique_name_in_owner = true
own_world_3d = true
world_3d = SubResource("World3D_5xxq4")
handle_input_locally = false
size = Vector2i(1024, 256)
render_target_update_mode = 4

[node name="SVCamera3D" type="Camera3D" parent="VBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
keep_aspect = 0
projection = 1
current = true
size = 8.0

[node name="SamplesGrid001" type="MeshInstance3D" parent="VBoxContainer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
mesh = ExtResource("2_n6vhq")
skeleton = NodePath("../../../..")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="VBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)

[node name="HBoxContainerFill2" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CopyMaterialsButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
text = "Apply to selected mesh instance"

[node name="LoadMaterialsFromMeshButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Set from selected mesh instance"

[node name="SaveMaterialsButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Save Material Sample"

[node name="SixteenLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Show 16 materials"

[node name="SixteenCheckButton" type="CheckButton" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="CopyMaterialsButton2" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
text = "Apply to selected mesh instance"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/OtherSceneBrowseButton" to="." method="_on_other_scene_browse_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SampleDirButton" to="." method="_on_sample_dir_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="gui_input" from="VBoxContainer/SubViewportContainer" to="." method="_on_sub_viewport_container_gui_input"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CopyMaterialsButton" to="." method="_on_copy_materials_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/LoadMaterialsFromMeshButton" to="." method="_on_load_materials_from_mesh_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/SaveMaterialsButton" to="." method="_on_save_materials_button_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/SixteenCheckButton" to="." method="_on_sixteen_check_button_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CopyMaterialsButton2" to="." method="_on_copy_materials_button_pressed"]
